tests/paczka1/fuzzy1/69083493.err
Error in line 1: S103 S103 31,1
Error in line 5: S103 A933 295,0
Error in line 9: S103 S103 12,4
Error in line 20: zdA S103 75,1
Error in line 28: LDK6ws S118 18,1
Error in line 38: StJqsU A933 75,2
